tests/semantic/fail/illegal_member_access2.c
int main(void) {
  int i;
  i.i; // <--i is not a struct 
  return 0;
}
